implement default equals(), hashCode(), and toString()