@@ -18,6 +18,7 @@ run {
                 "--add-opens=javafx.controls/com.sun.javafx.scene.control.behavior=controlsfx",
                 "--add-opens=javafx.controls/javafx.scene.control.skin=controlsfx",
                 "--add-opens=javafx.graphics/javafx.scene=controlsfx",
+                "--add-opens=java.base/java.util=org.apache.commons.lang3",
                 "--add-opens=java.base/java.time.chrono=bw.core",
                 "--add-opens=javafx.controls/javafx.scene.control.skin=bw.core",
                 '-Djava.library.path=../build-resources/javafx-dlls/64-bit',
